welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: value update is not a member of Boolean
while (vuBiscuit()=false) {avance()}
       ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit()=false) {avance()}
^